--- a/src/pages/Home/Footer/index.less
+++ b/src/pages/Home/Footer/index.less
@@ -4,7 +4,7 @@
   height: 100px;
   background-color: rgba(0, 168, 255, 20%);
   position: absolute;
-  bottom: 0;
+  bottom: -2%;
   left: 50%;
   right: 50%;
   transform: translate(-50%, -50%);
