--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -3,6 +3,9 @@
   min-height: 100vh;
   background: rgb(40, 30, 47) url('../../../public/img/bg.png') 0 0 / 100% 100%
     no-repeat;
+  // background: rgb(40, 30, 47)
+  //   url(http://k21vin.gitee.io/front-end-data-visualization/assets/bg01.13dfb262.jpg)
+  //   0 0 / 100% 100% no-repeat;
   overflow: hidden;
   position: relative;
   min-width: 1200px;
@@ -10,12 +13,7 @@
 
 .header {
   background: url('../../../public/img/header.png') 0 0 / 100% 100% no-repeat;
-  padding: 0 40px 0;
   height: 72px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
   position: relative;
 
   .title {
@@ -28,18 +26,26 @@
     line-height: 64px;
   }
 
-  .h_c {
-    background-color: transparent;
-    color: #72e3ff;
-    border: #00c0ef 2px solid;
-    width: 200px;
-    text-indent: 0.6em;
-    border-radius: 5px;
-  }
+  .flexBox {
+    width: 100%;
+    padding: 20px 40px 0;
+    line-height: 72px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .h_c {
+      background-color: transparent;
+      color: #72e3ff;
+      border: #00c0ef 2px solid;
+      width: 200px;
+      text-indent: 0.6em;
+      border-radius: 5px;
+    }
 
-  .h_t {
-    text-align: right;
-    color: #fff;
-    font-size: 15px;
+    .h_t {
+      text-align: right;
+      color: #fff;
+      font-size: 15px;
+    }
   }
 }
