--- a/src/pages/Home/Park/index.less
+++ b/src/pages/Home/Park/index.less
@@ -1,5 +1,5 @@
 .park_main {
-  padding: 20px 40px 0 40px;
+  padding: 1.25rem 2.5rem 0 2.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -7,42 +7,42 @@
   // 安防检测
   .m_l_2,
   .m_r_2 {
-    margin-top: 50px;
+    margin-top: 3.125rem;
     .card {
-      margin-top: 20px;
-      width: 342px;
-      border-radius: 8px;
+      margin-top: 1.25rem;
+      width: 21.375rem;
+      border-radius: 0.5rem;
       background-color: rgba(0, 168, 255, 20%);
       // background: rgba(255, 255, 255, 0.3);
-      backdrop-filter: blur(10px);
-      box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(0.625rem);
+      box-shadow: 0 0 1.875rem 0.625rem rgba(0, 0, 0, 0.3);
       display: flex;
       flex-direction: column;
-      padding: 0 10px 0px;
+      padding: 0 0.625rem 0;
 
       .c_t_head {
         display: flex;
         justify-content: space-between;
         align-items: center;
         color: #fff;
-        padding: 5px;
-        line-height: 40px;
-        border-bottom: 1px solid #fff;
+        padding: 0.3125rem;
+        line-height: 2.5rem;
+        border-bottom: 0.0625rem solid #fff;
         .show {
-          font-size: 12px;
+          font-size: 0.75rem;
         }
       }
 
       // 总体事件
       .list {
         list-style: none;
-        font-size: 10px;
+        font-size: 0.625rem;
         color: #868fa8;
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin: 0;
-        padding: 20px;
+        padding: 1.25rem;
 
         li {
           display: flex;
@@ -50,18 +50,18 @@
 
           .tit {
             color: #30fdf0;
-            font-size: 16px;
+            font-size: 1rem;
             i {
               font-style: normal;
-              font-size: 24px;
+              font-size: 1.5rem;
             }
           }
           div {
-            margin-top: 10px;
+            margin-top: 0.625rem;
 
             span {
               &:nth-child(2) {
-                margin-left: 4px;
+                margin-left: 0.25rem;
                 color: #fff;
               }
             }
@@ -74,8 +74,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 20px;
-        font-size: 10px;
+        padding: 1.25rem;
+        font-size: 0.625rem;
         color: #868fa8;
 
         div {
@@ -83,10 +83,10 @@
           flex-direction: column;
           align-items: start;
           .moonData_tit {
-            margin-bottom: 10px;
+            margin-bottom: 0.625rem;
           }
           .nums {
-            font-size: 24px;
+            font-size: 1.5rem;
             color: #fff;
           }
         }
@@ -99,8 +99,8 @@
 
       // 违规上报列表
       .table_box {
-        margin: 20px 0;
-        max-height: 248px;
+        margin: 1.25rem 0;
+        max-height: 15.5rem;
         overflow: auto;
 
         .t_table {
@@ -109,13 +109,13 @@
           margin: 0 auto;
           border-spacing: 0;
           box-sizing: border-box;
-          font-size: 12px;
+          font-size: 0.75rem;
           table-layout: fixed;
 
           tr {
             margin: 0;
             padding: 0;
-            line-height: 30px;
+            line-height: 1.875rem;
           }
 
           thead {
@@ -129,7 +129,7 @@
           }
 
           td {
-            font-size: 12px;
+            font-size: 0.75rem;
           }
         }
       }
@@ -138,10 +138,10 @@
       width: 100%;
       text-align: right;
       color: #fff;
-      font-size: 24px;
+      font-size: 1.5rem;
       i {
         font-style: normal;
-        font-size: 38px;
+        font-size: 2.375rem;
         color: #30fdf0;
       }
     }
