--- a/src/pages/Home/Security/index.less
+++ b/src/pages/Home/Security/index.less
@@ -1,5 +1,5 @@
 .security_main {
-  padding: 20px 40px 0 40px;
+  padding: 1.25rem 2.5rem 0 2.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -8,28 +8,28 @@
   .m_l_1,
   .m_r_1 {
     .card {
-      margin-top: 20px;
-      width: 392px;
-      border-radius: 8px;
+      margin-top: 1.25rem;
+      width: 24.5rem;
+      border-radius: 0.5rem;
       background-color: rgba(0, 168, 255, 20%);
       display: flex;
       flex-direction: column;
-      padding: 0 10px 20px;
+      padding: 0 0.625rem 1.25rem;
 
       .barsBox {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 10px 0;
+        padding: 0 0.625rem 0;
 
         .tit {
-          font-size: 18px;
+          font-size: 1.125rem;
           color: #fff;
         }
       }
 
       .table_box {
-        max-height: 140px;
+        max-height: 8.75rem;
         overflow: auto;
 
         .t_table {
@@ -39,13 +39,13 @@
           border-spacing: 0;
           text-align: center;
           box-sizing: border-box;
-          font-size: 12px;
+          font-size: 0.75rem;
           table-layout: fixed;
 
           tr {
             margin: 0;
             padding: 0;
-            line-height: 28px;
+            line-height: 1.75rem;
           }
 
           thead {
@@ -57,7 +57,7 @@
           }
 
           td {
-            font-size: 12px;
+            font-size: 0.75rem;
           }
         }
       }
