--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -10,7 +10,7 @@
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script rel="dns-prefetch" src="//cdn.youxu.cc/flexible.js"></script>
+    <script rel="dns-prefetch" src="//s.xinc818.com/files/flexible.js"></script>
     <title>可视化</title>
   </head>
   <body></body>
