--- a/src/pages/Home/Footer/index.less
+++ b/src/pages/Home/Footer/index.less
@@ -1,7 +1,7 @@
 .footer {
-  width: 422px;
-  border-radius: 8px;
-  height: 100px;
+  width: 26.375rem;
+  border-radius: 0.5rem;
+  height: 6.25rem;
   background-color: rgba(0, 168, 255, 20%);
   position: absolute;
   bottom: -2%;
@@ -11,7 +11,7 @@
 
   .f_warp {
     color: #fff;
-    font-size: 12px;
+    font-size: 0.75rem;
     display: flex;
     align-items: center;
     height: 100%;
@@ -25,9 +25,8 @@
       align-items: center;
 
       img {
-        width: 40px;
-        height: 40px;
-        margin-bottom: 10px;
+        height: 2.5rem;
+        margin-bottom: 0.625rem;
       }
     }
   }
