--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -13,7 +13,7 @@
 
 .header {
   background: url('../../../public/img/header.png') 0 0 / 100% 100% no-repeat;
-  height: 72px;
+  height: 4.5rem;
   position: relative;
 
   .title {
@@ -21,31 +21,31 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
-    font-size: 28px;
+    font-size: 1.75rem;
     font-weight: 400;
-    line-height: 64px;
+    line-height: 4rem;
   }
 
   .flexBox {
     width: 100%;
-    padding: 20px 40px 0;
-    line-height: 72px;
+    padding: 1.25rem 2.5rem 0;
+    line-height: 4.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     .h_c {
       background-color: transparent;
       color: #72e3ff;
-      border: #00c0ef 2px solid;
-      width: 200px;
+      border: #00c0ef 0.125rem solid;
+      width: 12.5rem;
       text-indent: 0.6em;
-      border-radius: 5px;
+      border-radius: 0.3125rem;
     }
 
     .h_t {
       text-align: right;
       color: #fff;
-      font-size: 15px;
+      font-size: 0.9375rem;
     }
   }
 }
