--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -11,6 +11,11 @@
     <meta http-equiv="expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script rel="dns-prefetch" src="//s.xinc818.com/files/flexible.js"></script>
+    <!-- <script
+            type="text/javascript"
+            src="https://webapi.amap.com/maps?v=2.0&key=89891f300af25a591b87a190d71165a2&plugin=AMap.MouseTool,AMap.PolyEditor,AMap.LabelMarker,AMap.Autocomplete,AMap.ToolBar,AMap.PlaceSearch,AMap.HeatMap,AMap.Geocoder,AMap.ControlBar,AMap.DistrictSearch,AMap.MarkerCluster"
+        ></script>
+        <script src="https://webapi.amap.com/loca?v=2.0.0&key=89891f300af25a591b87a190d71165a2"></script> -->
     <title>可视化</title>
   </head>
   <body></body>
