--- a/src/pages/Home/Park/index.less
+++ b/src/pages/Home/Park/index.less
@@ -150,5 +150,9 @@
   // 中间
   .m_l_m {
     color: #fff;
+    overflow: hidden;
+    width: 100%;
+    background: #000d59;
+    border: 1px solid #1968ff;
   }
 }
