--- a/src/pages/HistoryMonitor/index.less
+++ b/src/pages/HistoryMonitor/index.less
@@ -12,7 +12,7 @@
 
   color: #fff;
 
-  padding: 5%;
+  padding: 3%;
 }
 
 .historyMonitorWarp {
@@ -24,7 +24,7 @@
   .h_left,
   .h_right {
     flex: 1;
-    width: 20%;
+    width: 15%;
     border: 1px solid #fff;
   }
 
@@ -34,6 +34,13 @@
     .search_inp {
       margin: 20px 0;
     }
+
+    .h_sider {
+      :where(.css-dev-only-do-not-override-1xg9z9n).ant-menu-light,
+      :where(.css-dev-only-do-not-override-1xg9z9n).ant-menu-light > .ant-menu {
+        background-color: aqua;
+      }
+    }
   }
 
   .h_middle {
@@ -41,20 +48,48 @@
     margin: 0 1%;
     border: 1px solid #fff;
 
-    .h_middle_ul {
-      width: 100%;
+    .h_flex {
       display: flex;
-      justify-content: space-between;
       flex-wrap: wrap;
-      padding: 10px;
 
-      li {
-        width: 31%;
-        list-style: none;
-        height: 100px;
-        background-color: #bbb;
-        &:nth-child(3n + 3) {
-          margin-bottom: 10px;
+      .h_flex_item {
+        flex: 1;
+
+        .h_device_item {
+          width: 13.125rem;
+          overflow: hidden;
+          height: 14.0625rem;
+          box-shadow: 0 0 0.5vh #11111122;
+          margin: 2px;
+
+          position: relative;
+
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 3px;
+          }
+
+          .info {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: #11111122;
+            text-align: center;
+            cursor: pointer;
+            color: #fff;
+
+            &:hover {
+              background: #00fac144;
+            }
+
+            .icon {
+              margin-top: 30%;
+              font-size: 3rem;
+            }
+          }
         }
       }
     }
