--- a/src/pages/HistoryMonitor/index.less
+++ b/src/pages/HistoryMonitor/index.less
@@ -56,23 +56,22 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 20px;
+      // margin-bottom: 20px;
     }
 
     .h_flex {
-      flex: 2;
+      // flex: 2;
 
       display: flex;
-      justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
 
       .h_flex_item {
         margin: 4px;
         .h_device_item {
-          width: 267px;
+          width: 15.6875rem;
           overflow: hidden;
-          height: 190px;
+          height: 7.5rem;
           box-shadow: 0 0 0.5vh #11111122;
 
           position: relative;
@@ -99,7 +98,7 @@
             }
 
             .icon {
-              margin-top: 30%;
+              margin-top: 10%;
               font-size: 3rem;
             }
           }
@@ -111,6 +110,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      margin: 0 5px;
 
       .h_handle_box,
       .h_handle_play {
