--- a/src/pages/HistoryMonitor/index.less
+++ b/src/pages/HistoryMonitor/index.less
@@ -46,6 +46,20 @@
     flex: 3;
     margin: 0 5px;
 
+    .h_tabs {
+      .ant-tabs-nav {
+        .ant-tabs-nav-wrap {
+          .ant-tabs-nav-list {
+            .ant-tabs-tab {
+              .ant-tabs-tab-btn {
+                color: #fff;
+              }
+            }
+          }
+        }
+      }
+    }
+
     .h_warpper {
       display: flex;
       flex-direction: column;
