fix: change map

--- a/src/pages/HistoryMonitor/index.less
+++ b/src/pages/HistoryMonitor/index.less
@@ -12,7 +12,7 @@
 
   color: #fff;
 
-  padding: 3%;
+  padding: 1% 3%;
 }
 
 .historyMonitorWarp {
@@ -74,11 +74,10 @@
     }
 
     .h_flex {
-      // flex: 2;
-
       display: flex;
       align-items: center;
       flex-wrap: wrap;
+      margin: 1.25rem 0;
 
       .h_flex_item {
         margin: 4px;
