--- a/src/pages/SecurityMonitor/index.less
+++ b/src/pages/SecurityMonitor/index.less
@@ -1,8 +1,13 @@
 .security_main {
   padding: 1.25rem 2.5rem 0 2.5rem;
+  width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  font-size: 32px;
+  color: #fff;
 
   // 园区概况
   .m_l_1,
