fix: change style

--- a/src/pages/NationalOverview/index.less
+++ b/src/pages/NationalOverview/index.less
@@ -1,40 +1,5 @@
 .park_main {
   padding: 1.25rem 2.5rem 0 2.5rem;
-  // display: flex;
-  // justify-content: space-between;
-  // align-items: center;
-  // position: relative;
-
-  // 安防检测
-  // .m_l_2,
-  // .m_r_2 {
-  // margin-top: 3.125rem;
-  // .card {
-  // margin-top: 1.25rem;
-  // width: 21.375rem;
-  // border-radius: 0.5rem;
-  // background-color: rgba(0, 168, 255, 20%);
-  // backdrop-filter: blur(0.625rem);
-  // display: flex;
-  // flex-direction: column;
-  // padding: 0 0.625rem 0;
-
-  // .c_t_head {
-  //   display: flex;
-  //   justify-content: space-between;
-  //   align-items: center;
-  //   color: #fff;
-  //   padding: 0.3125rem;
-  //   line-height: 2.5rem;
-  //   border-bottom: 0.0625rem solid #fff;
-  //   .show {
-  //     font-size: 0.75rem;
-  //     display: flex;
-  //     align-items: center;
-  //     cursor: pointer;
-  //   }
-  // }
-
   // 总体事件
   .list {
     list-style: none;
@@ -94,7 +59,7 @@
     }
   }
 
-  // // 车辆信息
+  // 车辆信息
   .diverPie {
     height: 100%;
   }
@@ -135,7 +100,6 @@
       }
     }
   }
-  // }
   .countdown {
     width: 100%;
     text-align: right;
@@ -146,11 +110,5 @@
       font-size: 2.375rem;
       color: #30fdf0;
     }
-  }
-  // }
-
-  // 中间
-  .m_l_m {
-    // overflow: hidden;
   }
 }
