--- a/src/pages/ParkMonitor/index.less
+++ b/src/pages/ParkMonitor/index.less
@@ -77,13 +77,41 @@
 .videogrid_wrapper {
   margin: 10px 0;
 
+
+  &.fullscreen {
+    object-fit: contain;
+    user-select: text;
+    position: fixed !important;
+    box-sizing: border-box !important;
+    min-width: 0px !important;
+    max-width: none !important;
+    min-height: 0px !important;
+    max-height: none !important;
+    width: 100% !important;
+    height: 100% !important;
+    transform: none !important;
+    inset: 0px !important;
+    margin: 0px !important;
+    background: #000 !important;
+    z-index: 11;
+  }
+
   .videogrid {
     display: grid;
     grid-column-gap: 2px;
     grid-row-gap: 2px;
     width: 100%;
     height: 100%;
-
+    
+    .fullscreen {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 100%;
+      height: auto;
+      transform: translateY(-50%);
+      background: #000;
+    }
     // 四宫格
     &.videogrid_4 {
       grid-template-columns: repeat(2, 1fr);
@@ -143,6 +171,7 @@
   justify-content: flex-end;
   align-items: center;
   margin: 0 5px;
+  margin-bottom: 10px;
 
   .h_handle_box,
   .h_handle_play {
