--- a/src/pages/ParkMonitor/index.less
+++ b/src/pages/ParkMonitor/index.less
@@ -103,15 +103,15 @@
     width: 100%;
     height: 100%;
     
-    .fullscreen {
-      position: absolute;
-      top: 50%;
-      left: 0;
-      width: 100%;
-      height: auto;
-      transform: translateY(-50%);
-      background: #000;
-    }
+    // .fullscreen {
+    //   position: absolute;
+    //   top: 50%;
+    //   left: 0;
+    //   width: 100%;
+    //   height: auto;
+    //   transform: translateY(-50%);
+    //   background: #000;
+    // }
     // 四宫格
     &.videogrid_4 {
       grid-template-columns: repeat(2, 1fr);
