--- a/src/pages/ParkMonitor/index.less
+++ b/src/pages/ParkMonitor/index.less
@@ -46,6 +46,10 @@
   justify-content: space-between;
   align-items: center;
 
+  .h_t {
+    color: #fff;
+  }
+
   .h_play_box {
     display: flex;
     justify-content: space-between;
