--- a/src/pages/ParkMonitor/index.less
+++ b/src/pages/ParkMonitor/index.less
@@ -75,7 +75,6 @@
 .videogrid_wrapper {
   margin: 10px 0;
 
-
   &.fullscreen {
     object-fit: contain;
     user-select: text;
@@ -100,7 +99,7 @@
     grid-row-gap: 2px;
     width: 100%;
     height: 100%;
-    
+
     // .fullscreen {
     //   position: absolute;
     //   top: 50%;
@@ -110,6 +109,15 @@
     //   transform: translateY(-50%);
     //   background: #000;
     // }
+
+    .player_wrapper {
+      cursor: pointer;
+
+      &.activeIndex {
+        border: 1px solid red;
+      }
+    }
+
     // 四宫格
     &.videogrid_4 {
       grid-template-columns: repeat(2, 1fr);
