--- a/src/pages/ParkMonitor/index.less
+++ b/src/pages/ParkMonitor/index.less
@@ -116,6 +116,23 @@
       &.activeIndex {
         border: 1px solid red;
       }
+
+      .xgplayer_skin_default {
+        background: #000;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+        -ms-user-select: none;
+
+        video {
+          width: 100%;
+          height: 100%;
+          outline: none;
+        }
+      }
     }
 
     // 四宫格
