--- a/src/components/layouts/index.less
+++ b/src/components/layouts/index.less
@@ -2,7 +2,7 @@
   width: 100%;
   min-width: 1200px;
   min-height: 100vh;
-  background: rgb(40, 30, 47) url('../../public/img/bg.png') 0 0 / 100% 100%
+  background: rgb(40, 30, 47) url('../../../public/img/bg.png') 0 0 / 100% 100%
     no-repeat;
   // background: rgb(40, 30, 47)
   //   url(http://k21vin.gitee.io/front-end-data-visualization/assets/bg01.13dfb262.jpg)
@@ -12,7 +12,7 @@
 }
 
 .header {
-  background: url('../../public/img/header.png') 0 0 / 100% 100% no-repeat;
+  background: url('../../../public/img/header.png') 0 0 / 100% 100% no-repeat;
   height: 4.5rem;
   position: relative;
 
