--- a/src/components/AvatarName/index.less
+++ b/src/components/AvatarName/index.less
@@ -1,11 +1,11 @@
-.avatar-name{
-  display: flex;
-  justify-content: end;
-  background: #F7F8FA;
-  height: 50px;
-  align-items: center;
-  padding-right: 40px;
-  position: sticky;
-  top: 0;
-  // z-index: 999;
-}
+// .avatar-name{
+//   display: flex;
+//   justify-content: end;
+//   background: #F7F8FA;
+//   height: 50px;
+//   align-items: center;
+//   padding-right: 40px;
+//   position: sticky;
+//   top: 0;
+//   // z-index: 999;
+// }
