--- a/src/pages/ParkMonitor/index.less
+++ b/src/pages/ParkMonitor/index.less
@@ -126,12 +126,24 @@
         -moz-user-select: none;
         user-select: none;
         -ms-user-select: none;
+        // display: none;
 
         video {
           width: 100%;
           height: 100%;
           outline: none;
         }
+      }
+
+      .xgplayer-skin-default * {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font-size: 100%;
+        font: inherit;
+        vertical-align: baseline;
+        white-space: normal;
+        word-wrap: normal;
       }
     }
 
