--- a/src/global.less
+++ b/src/global.less
@@ -103,3 +103,44 @@ a {
 a:hover {
   color: #3d54cc;
 }
+
+.xc-layout-header {
+  display: flex;
+  height: 48px;
+  // padding: 0 20px;
+  line-height: 48px;
+  background: transparent;
+  // background-color: #f7f8fa !important;
+  justify-content: space-between;
+
+  .history-tabs {
+    width: 800px;
+    flex-direction: column;
+    justify-content: end;
+
+    .ant-tabs-nav {
+      margin-bottom: 0;
+    }
+
+    .ant-tabs-content-holder {
+      display: none;
+    }
+  }
+
+  .use-info {
+    display: flex;
+    align-items: center;
+
+    .use-name {
+      .avatar {
+        margin-right: 4px;
+        margin-left: 24px;
+      }
+
+      .text {
+        font-size: 14px;
+        color: #4e5969;
+      }
+    }
+  }
+}
